--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,6 @@
   "require": {
   },
   "autoload": {
-    "psr-4": { "ilbee\\CSVResponse\\": "src/" }
+    "psr-4": { "Ilbee\\CSVResponse\\": "src/" }
   }
 }
