Add phpunit test support

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -8,15 +8,11 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
-
     - name: Cache Composer packages
       id: composer-cache
       uses: actions/cache@v2
@@ -25,7 +21,6 @@ jobs:
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-php-
-
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
 
@@ -34,3 +29,12 @@ jobs:
 
     # - name: Run test suite
     #   run: composer run-script test
+  build-test:
+
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: php-actions/composer@v5
+      - uses: php-actions/phpunit@v2
+          with:
+            configuration: ./phpunit.xml
