--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -28,9 +28,8 @@ jobs:
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
-
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
-    # - name: Run test suite
-    #   run: composer run-script test
+      
+    - name: PHPUnit (php-actions)
+      uses: php-actions/phpunit@v2
+      with:
+        configuration: ./phpunit.xml
