--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -7,29 +7,17 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
+  run:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        php-versions: ['7.1', '7.4', '8.0', '8.1']
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-    - name: Validate composer.json and composer.lock
-      run: composer validate --strict
+      - uses: php-actions/composer@v6
 
-    - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v2
-      with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
-
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
-      
-    - name: PHPUnit (php-actions)
-      uses: php-actions/phpunit@v2
-      with:
-        configuration: ./phpunit.xml
+      - name: PHPUnit Tests
+        uses: php-actions/phpunit@v3
+        with:
+          php_version: ${{ matrix.php-versions }}
