--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   },
   "require": {
     "php": ">=7.1.3",
-    "symfony/symfony": "4.4.*"
+    "symfony/symfony": "^4.4 || ^6"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0 || ^9.0"
@@ -35,5 +35,8 @@
     "psr-4" : {
       "Ilbee\\CSVResponse\\Tests\\" : "tests/"
     }
+  },
+  "scripts": {
+    "test": "./vendor/bin/phpunit"
   }
 }
