--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -16,6 +16,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: php-actions/composer@v6
+        with:
+          php_version: ${{ matrix.php-versions }}
 
       - name: PHPUnit Tests
         uses: php-actions/phpunit@v3
