--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -11,12 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php-versions: ['7.1', '7.4', '8.0', '8.1']
+        php-versions: ['7.2', '7.4', '8.0', '8.1']
     steps:
       - uses: actions/checkout@v3
 
       - uses: php-actions/composer@v6
         with:
+          command: update
           php_version: ${{ matrix.php-versions }}
 
       - name: PHPUnit Tests
