--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "symfony/symfony": "^4.4 || ^6"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.0 || ^9.0"
+    "phpunit/phpunit": ">=8.0.0 <10.0.0"
   },
   "autoload": {
     "psr-4": {
