--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -32,4 +32,5 @@ jobs:
         uses: php-actions/phpunit@v2
         with:
           php_version: ${{ matrix.php-versions }}
+          vendored_phpunit_path: ./vendor/bin/phpunit
           configuration: ./phpunit.xml
