--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
   },
   "require": {
     "php": ">=7.1.3",
-    "symfony/symfony": "^4.4 || ^6"
+    "symfony/symfony": "^6"
   },
   "require-dev": {
-    "phpunit/phpunit": ">=8.0.0 <10.0.0"
+    "phpunit/phpunit": "^9.6"
   },
   "autoload": {
     "psr-4": {
