--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         symfony-versions: ['^4.4', '^5.0', '^6.0']
-        php-versions: ['8.0'] #  ['7.2', '7.4', '8.0', '8.1']
+        php-versions: ['7.2', '7.4', '8.0', '8.1']
     steps:
       - uses: actions/checkout@v3
 
@@ -24,14 +24,17 @@ jobs:
       - name: Update Symfony
         uses: php-actions/composer@v6
         with:
+          php_version: ${{ matrix.php-versions }}
           command: require
           args: symfony/symfony:${{ matrix.symfony-versions }} -W
-          php_version: ${{ matrix.php-versions }}
 
-      - name: PHPUnit (php-actions)
-        uses: php-actions/phpunit@chmod-permission
-        with:
-          php_version: ${{ matrix.php-versions }}
-          # TODO: https://github.com/php-actions/phpunit/issues/51
-          vendored_phpunit_path: vendor/bin/phpunit
-          configuration: ./phpunit.xml
+      - name: PHPUnit (script)
+        run: ./vendor/bin/phpunit
+
+#      - name: PHPUnit (php-actions)
+#        uses: php-actions/phpunit@v3
+#        with:
+#          php_version: ${{ matrix.php-versions }}
+#          # TODO: https://github.com/php-actions/phpunit/issues/51
+#          vendored_phpunit_path: vendor/bin/phpunit
+#          configuration: ./phpunit.xml
