--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "issues": "https://github.com/ilbee/csv-response/issues"
   },
   "require": {
-    "php": ">=7.1.3",
+    "php": ">=7.4 <9",
     "symfony/symfony": "^4 || ^5 || ^6"
   },
   "require-dev": {
