--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,6 +13,10 @@ jobs:
       matrix:
         symfony-versions: ['^4.4', '^5.0', '^6.0']
         php-versions: ['8.1', '8.0', '7.4']
+        exclude:
+          - symfony-versions: '^6.0'
+            php-versions: '7.4'
+
     steps:
       - uses: actions/checkout@v3
 
