--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "symfony/symfony": "^4 || ^5 || ^6"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.6"
+    "phpunit/phpunit": "^9.6",
+    "squizlabs/php_codesniffer": "^3.7"
   },
   "autoload": {
     "psr-4": {
@@ -37,6 +38,8 @@
     }
   },
   "scripts": {
+    "phpcbf": "./vendor/bin/phpcbf",
+    "phpcs": "./vendor/bin/phpcs",
     "test": "./vendor/bin/phpunit"
   }
 }
