--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,6 +13,7 @@ jobs:
       matrix:
         symfony-versions: ['^4.4', '^5.0', '^6.0']
         php-versions: ['8.1', '8.0', '7.4']
+        # Exclude combinations that are not installable.
         exclude:
           - symfony-versions: '^6.0'
             php-versions: '7.4'
