--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   },
   "require": {
     "php": ">=7.4 <9",
-    "symfony/http-foundation": "^4 || ^5 || ^6"
+    "symfony/http-foundation": "^4 || ^5 || ^6 || ^7"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.6",
