--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -11,12 +11,20 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        symfony-versions: ['^4.4', '^5.0', '^6.0']
-        php-versions: ['8.1', '8.0', '7.4']
+        symfony-versions: ['^4.4', '^5.0', '^6.0', '^7.0']
+        php-versions: ['8.3', '8.2', '8.1', '8.0', '7.4']
         # Exclude combinations that are not installable.
         exclude:
           - symfony-versions: '^6.0'
             php-versions: '7.4'
+          - symfony-versions: '^7.0'
+            php-versions: '7.4'
+          - symfony-versions: '^7.0'
+            php-versions: '8.1'
+          - symfony-versions: '^7.0'
+            php-versions: '8.0'
+          - symfony-versions: '^7.0'
+            php-versions: '8.2'
 
     steps:
       - uses: actions/checkout@v3
